--- a/drawTriangles/index.html
+++ b/drawTriangles/index.html
@@ -11,5 +11,5 @@
     <canvas id="glcanvas" width="640" height="480">
     </canvas>
 </body>
-<script src="index.js"></script>
+<script src="./index.js"></script>
 </html>
